fix: scrollbar hide

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 @font-face {
   font-family: 'Syne';
   src: url('..//fonts/Syne.woff') format('woff');
